cmake_minimum_required(VERSION 3.21)
project(unordered_map_project)

set(CMAKE_CXX_STANDARD 20)
#add_subdirectory(for_gtests/googletest)

#include_directories(for_gtests/googletest/googletest/include)
add_executable(unordered_map_project main.cpp)
#add_executable(GtestDemo main.cpp)
#target_link_directories(GtestDemo gtest)
